[package]
name = "kitkat"
version = "1.2.0"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>", "Mark Bauermeister"]
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/markusbkk/kitkat"
categories = ["games", ]
description = "The classic kit kat clock utility."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.19"
libc = "0.2"
